# advent-of-code-2024

./: Cargo.toml
benches/: aoc_benchmark.rs
src/: lib.rs  main.rs
src/day1/: mod.rs
src/day2/: mod.rs
src/day3/: README.md  day3.pest  mod.rs
src/template/: mod.rs
