[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "5.0.0"
log = "0.4.20"
criterion = "0.5.1"
pest = "2.7.14"
pest_derive = "2.7.14"

[[bench]]
name = "aoc_benchmark"
harness = false

[[bin]]
name = "run"
path = "src/main.rs"
